--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,3 +2,10 @@
 @import "./main";
 @import "./homepage";
 @import "./about";
+@import "./courses";
+@import "./courses-detail";
+@import "./contact";
+@import "./blog";
+@import "./blog-detail";
+@import "./book";
+@import "./book-detail";
