--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -19,3 +19,235 @@
   }
 }
 // END BANNER
+
+// START MISSION
+#about-mission {
+  padding: 100px 0;
+  margin-top: 130px;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    right: calc((100% - 1160px) / 2);
+    bottom: 0;
+    background-color: $white;
+  }
+  .container {
+    margin-right: 0;
+    padding-right: 0;
+    max-width: calc(1181px + (100% - 1160px) / 2);
+  }
+  .mission-wrapper {
+    @include flex(space-between, center, 30px);
+  }
+  .mission-content {
+    max-width: 534px;
+    .heading-block {
+      .title {
+        margin-bottom: 20px;
+      }
+    }
+    .text {
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: $fw-l;
+      margin-bottom: 24px;
+    }
+  }
+  .mission-image {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    overflow: hidden;
+    img {
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+// END MISSION
+
+// START VALUE
+#about-value {
+  background: url(../images/others/value-bg.jpg) no-repeat center;
+  background-size: cover;
+  padding: 140px 0;
+  .value-content {
+    max-width: 566px;
+    margin-left: auto;
+    .heading-block {
+      .title {
+        margin-bottom: 20px;
+        text-align: right;
+      }
+    }
+    .text {
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: $fw-l;
+      text-align: right;
+      color: $white;
+      margin-bottom: 24px;
+    }
+  }
+}
+// END VALUE
+
+// START TEAM
+#about-team {
+  padding: 75px 0;
+  background-color: $white;
+  .heading-block {
+    .title {
+      text-align: center;
+    }
+    .desc {
+      color: $black;
+      max-width: 596px;
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+  .team-slider {
+    margin-top: 45px;
+  }
+
+  .swiper {
+    .swiper-wrapper {
+      align-items: center;
+      height: 594px;
+    }
+    .swiper-slide {
+      @include flex(center, center, unset);
+      .team-item {
+        .image {
+          aspect-ratio: 320/340;
+        }
+        .content {
+          opacity: 0;
+        }
+      }
+      &-next {
+        .team-item {
+          .image {
+            aspect-ratio: 440/550;
+          }
+          .content {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+
+  .team-item {
+    width: 100%;
+    .image {
+      aspect-ratio: 440/550;
+      overflow: hidden;
+      margin-bottom: 30px;
+      transition: all ease 1s;
+      img {
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .content {
+      transition: all ease 1s;
+      .name {
+        font-size: 28px;
+        line-height: 30px;
+        font-weight: $fw-sb;
+        font-family: $font-oswald;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        letter-spacing: 0.05em;
+      }
+      .job {
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: $fw-l;
+        text-align: center;
+      }
+    }
+  }
+}
+// END TEAM
+
+// START FORM
+#about-form {
+  margin-top: 120px;
+}
+// END FORM
+
+// START RESPONSIVE
+@include desktop {
+  #about-mission {
+    background-color: $white;
+    .container {
+      margin-right: auto;
+      padding-right: var(--bs-gutter-x, 0.75rem);
+      max-width: 960px;
+    }
+    &::before {
+      display: none;
+    }
+    .mission-wrapper {
+      justify-content: center;
+    }
+    .mission-image {
+      display: none;
+    }
+    .mission-content {
+      max-width: unset;
+    }
+  }
+}
+
+@include tablet {
+  #about-mission {
+    .container {
+      max-width: 720px;
+    }
+  }
+}
+
+@include landscape-phone {
+  #about-mission {
+    .container {
+      max-width: 540px;
+    }
+  }
+
+  #about-team {
+    .swiper {
+      .swiper-wrapper {
+        height: unset;
+      }
+      .swiper-slide {
+        .team-item {
+          .image {
+            aspect-ratio: 440/550;
+          }
+          .content {
+            opacity: 0;
+          }
+        }
+        &-active {
+          .team-item {
+            .image {
+              aspect-ratio: 440/550;
+            }
+            .content {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+// END RESPONSIVE
