--- a/assets/scss/_courses.scss
+++ b/assets/scss/_courses.scss
@@ -10,6 +10,19 @@
   height: 916px;
   margin-top: -126px;
   padding-top: 243px;
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
   .banner-wrapper {
     @include flex(space-between, center, 10px);
   }
