--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -2,7 +2,21 @@
 #home-banner {
   background: url(../images/banner/home-bg.png) no-repeat center;
   background-size: cover;
-  aspect-ratio: 1600/783;
+  position: relative;
+  margin-top: -126px;
+  .video {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
   .banner-slider {
     height: 100%;
     .swiper {
@@ -16,7 +30,7 @@
     }
   }
   .banner-wrapper {
-    padding-top: 124px;
+    padding-top: 200px;
     height: 100%;
   }
   .banner-content {
