--- a/assets/scss/_U051223.scss
+++ b/assets/scss/_U051223.scss
@@ -327,6 +327,11 @@
     padding: 43px 33px 38px;
     border-radius: 20px;
     border: 1px solid $yellow;
+    .content {
+      .title {
+        color: $yellow;
+      }
+    }
     .icon {
       width: 105px;
     }
