--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1083,7 +1083,26 @@ img {
   margin-top: 160px;
 }
 
-@media (max-width: 1440px) {
+@media only screen and (max-width: 1199px) {
+  #home-banner .heading-block .desc {
+    font-size: 14px;
+    line-height: 29px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  #home-book .book-wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 80px;
+  }
+  #home-book .book-image {
+    aspect-ratio: unset;
+    max-width: unset;
+    width: 100%;
+  }
+  #home-book .book-content {
+    max-width: unset;
+  }
   #home-banner {
     aspect-ratio: unset;
   }
@@ -1111,27 +1130,6 @@ img {
   }
   #home-banner .banner-image {
     display: none;
-  }
-}
-@media only screen and (max-width: 1199px) {
-  #home-banner .heading-block .desc {
-    font-size: 14px;
-    line-height: 29px;
-  }
-}
-@media only screen and (max-width: 991px) {
-  #home-book .book-wrapper {
-    flex-direction: column;
-    align-items: center;
-    gap: 80px;
-  }
-  #home-book .book-image {
-    aspect-ratio: unset;
-    max-width: unset;
-    width: 100%;
-  }
-  #home-book .book-content {
-    max-width: unset;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -2300,9 +2298,7 @@ img {
 @media (max-width: 1440px) {
   #home-banner .banner-wrapper {
     padding-top: 200px;
-  }
-  #home-banner .banner-wrapper .heading-block .badge {
-    text-align: center;
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 991px) {
