--- a/assets/scss/_U051223.scss
+++ b/assets/scss/_U051223.scss
@@ -1,6 +1,7 @@
 .heading-block {
   .badge {
-    white-space: wrap;
+    white-space: pre-line;
+    word-wrap: normal;
     text-align: left;
   }
 }
