--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1987,7 +1987,8 @@ img {
   }
 }
 .heading-block .badge {
-  white-space: wrap;
+  white-space: pre-line;
+  word-wrap: normal;
   text-align: left;
 }
 
