--- a/assets/scss/_U051223.scss
+++ b/assets/scss/_U051223.scss
@@ -4,6 +4,15 @@
     word-wrap: normal;
     text-align: left;
   }
+
+  .hero-title {
+    text-shadow: 1px 1px 1px #a1823a, 2px 2px 1px #a1823a, 3px 3px 1px #a1823a,
+      4px 4px 1px #a1823a;
+  }
+
+  .title {
+    text-shadow: 1px 1px 1px #a1823a, 2px 2px 1px #a1823a, 3px 3px 1px #a1823a;
+  }
 }
 
 #home-banner {
