--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2082,6 +2082,12 @@ img {
   overflow: hidden;
   border-radius: 10px;
 }
+.video .video-item:hover .image img {
+  transform: translateX(20px);
+}
+.video .video-item:hover .content {
+  bottom: 50px;
+}
 .video .video-item::before {
   content: "";
   width: 100%;
@@ -2089,6 +2095,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   background: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0) 48.22%);
 }
 .video .video-item .content {
@@ -2098,6 +2105,8 @@ img {
   transform: translateX(-50%);
   width: 90%;
   height: 90px;
+  transition: all ease 0.5s;
+  z-index: 2;
 }
 .video .video-item .content .title {
   text-align: center;
@@ -2116,11 +2125,17 @@ img {
 }
 .video .video-item .image {
   height: 100%;
+  position: relative;
 }
 .video .video-item .image img {
+  position: absolute;
+  width: auto;
+  top: 0;
+  left: -45%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  transition: all ease 0.5s;
 }
 .video .button {
   margin: 64px auto 0;
